<resources>
    <string name="app_name">MoodTracker</string>
    <string name="Yesterday">Hier</string>
    <string name="TwoDaysAgo">Avant-hier</string>
    <string name="ThreeDaysAgo">Il y a 3 jours</string>
    <string name="FourDaysAgo">Il y a 4 jours</string>
    <string name="FiveDaysAgo">Il y a 5 jours</string>
    <string name="SixDaysAgo">Il y a 6 jours</string>
    <string name="SevenDaysAgo">Il y a 7 jours</string>
    <string name="Comment">Commentaire</string>
    <string name="Validate">Valider</string>
    <string name="Erase">Effacer</string>
    <string name="Width1">77</string>
    <string name="Width2">154</string>
    <string name="Width3">231</string>
    <string name="Width4">308</string>
    <string name="Width5">385</string>
    <string name="Padding">15dp</string>
    <string name="SadMood">Sad mood</string>
    <string name="DisappointedMood">Disappointed mood </string>
    <string name="NormalMood">Normal mood</string>
    <string name="HappyMood">Happy mood</string>
    <string name="VeryHappyMood">Very happy mood</string>
    <string name="SoundOn">Sound on button</string>
    <string name="SoundOff">Sound off button</string>
    <string name="AddComment">Adding a comment</string>
    <string name="MoodHistory">To the history of moods</string>
    <string name="Statistics">Statistiques</string>
    <string name="PieChart">Button to choose pie chart</string>
    <string name="BarChart">Button to choose bar chart</string>
    <string name="CircularSketch">Circular sketch</string>

    <string name="title_activity_statistics">Statistics</string>
    <string name="AllDays">Nombre total de jours :</string>


</resources>
