<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/light_grey"
    >

<!--    Displays the moods on a week ago -->
    <TableRow
        android:layout_weight="1">
        <RelativeLayout>
            <TextView
                android:id="@+id/sevenDaysAgo_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/faded_red"
                android:padding="5dp"
                android:text="@string/SevenDaysAgo"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

            <ImageButton
                android:id="@+id/sevenDaysComment_btn"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignRight="@id/sevenDaysAgo_view"
                android:layout_alignEnd="@id/sevenDaysAgo_view"
                android:padding="15dp"
                android:contextClickable="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_comment_black_48px"
                android:background="@color/transparent"
                />
        </RelativeLayout>
    </TableRow>

<!--    Displays the moods on six days ago -->
    <TableRow
        android:layout_weight="1">
        <RelativeLayout>
            <TextView
                android:id="@+id/sixDaysAgo_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/warm_grey"
                android:padding="5dp"
                android:text="@string/SixDaysAgo"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

            <ImageButton
                android:id="@+id/sixDaysComment_btn"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignRight="@id/sixDaysAgo_view"
                android:layout_alignEnd="@id/sixDaysAgo_view"
                android:padding="15dp"
                android:contextClickable="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_comment_black_48px"
                android:background="@color/transparent"
                />
        </RelativeLayout>
    </TableRow>

    <!--    Displays the moods on five days ago -->
    <TableRow
        android:layout_weight="1">
        <RelativeLayout>
        <TextView
            android:id="@+id/fiveDaysAgo_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/cornflower_blue_65"
            android:padding="5dp"
            android:text="@string/FiveDaysAgo"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <ImageButton
            android:id="@+id/fiveDaysComment_btn"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_alignRight="@id/fiveDaysAgo_view"
            android:layout_alignEnd="@id/fiveDaysAgo_view"
            android:padding="15dp"
            android:contextClickable="true"
            android:visibility="invisible"
            android:src="@mipmap/ic_comment_black_48px"
            android:background="@color/transparent"
            />
        </RelativeLayout>
    </TableRow>

    <!--    Displays the moods on four days ago -->
    <TableRow
        android:layout_weight="1">
        <RelativeLayout>
            <TextView
                android:id="@+id/fourDaysAgo_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/light_sage"
                android:padding="5dp"
                android:text="@string/FourDaysAgo"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

            <ImageButton
                android:id="@+id/fourDaysComment_btn"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignRight="@id/fourDaysAgo_view"
                android:layout_alignEnd="@id/fourDaysAgo_view"
                android:padding="15dp"
                android:contextClickable="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_comment_black_48px"
                android:background="@color/transparent"
                />
        </RelativeLayout>
    </TableRow>

<!--    Displays the moods on three days ago -->
    <TableRow
        android:layout_weight="1">
        <RelativeLayout>
            <TextView
                android:id="@+id/threeDaysAgo_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/banana_yellow"
                android:padding="5dp"
                android:text="@string/ThreeDaysAgo"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

            <ImageButton
                android:id="@+id/threeDaysComment_btn"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignRight="@id/threeDaysAgo_view"
                android:layout_alignEnd="@id/threeDaysAgo_view"
                android:padding="15dp"
                android:contextClickable="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_comment_black_48px"
                android:background="@color/transparent"
                />
        </RelativeLayout>

    </TableRow>

<!--    Displays the moods on two days ago -->
    <TableRow
        android:layout_weight="1">
        <RelativeLayout>
            <TextView
                android:id="@+id/twoDaysAgo_view"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:background="@color/faded_red"
                android:padding="5dp"
                android:text="@string/TwoDaysAgo"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

            <ImageButton
                android:id="@+id/twoDaysComment_btn"
                android:background="@color/transparent"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignRight="@id/twoDaysAgo_view"
                android:layout_alignEnd="@id/twoDaysAgo_view"
                android:padding="15dp"
                android:contextClickable="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_comment_black_48px"
                />
        </RelativeLayout>
    </TableRow>

    <!--    Displays the moods on yesterday -->
    <TableRow
        android:layout_weight="1">
        <RelativeLayout>
        <TextView
            android:id="@+id/yesterday_view"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:background="@color/cornflower_blue_65"
            android:padding="5dp"
            android:text="@string/Yesterday"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <ImageButton
            android:id="@+id/yesterdayComment_btn"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_alignRight="@id/yesterday_view"
            android:layout_alignEnd="@id/yesterday_view"
            android:padding="15dp"
            android:contextClickable="true"
            android:visibility="invisible"
            android:src="@mipmap/ic_comment_black_48px"
            android:background="@color/transparent"
            />
        </RelativeLayout>
    </TableRow>

</TableLayout>
